Fix to broken link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,14 +49,14 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi there! My name is Ben Barriage.</h1>
-								<p>I am a self motivated software engineer who has been designing and creating project with code since 2017. My career began in the Robitics and Computer Vision Laboratory at Fordham University where I worked on the simulated navigation of robots based on an environmental image database.</p>
+								<h1>Hi there! My name is Ben Barriage</h1>
+								<p>I am a self motivated software engineer who has been designing and creating projects with code since 2017. My career began at the Robotics and Computer Vision Laboratory at Fordham University where I worked on the simulated navigation of robots based on an environmental image database.</p>
 								<p>Since then, I have worked primarily on 3D applications using ThreeJS, Unity3D, and a propriety game engine which I assisted in building. Using these tools, I have had the opportunity to work on a variety of projects including a real time 3D collision detection system, a GPU accelerated particle effect module, and a variety of content creation tools for artists/game designers.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/hsvd.png" alt="" />
+										<img src="images/hsvd.PNG" alt="" />
 									</span>
 									<a
 										href="https://www.cambridge.org/core/journals/robotica/article/abs/evaluation-of-field-of-view-width-in-stereovisionbased-visual-homing/B4AEF437A5CE633A0AEF275BA505D373">
