--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
 		<script defer src="header.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload light">
+	<body class="is-preload dark">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
