--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,14 +31,6 @@
 									<span class="symbol"><img src="images/ben.jfif" alt="" /></span><span class="title"></span>
 								</a>
 						
-
-							<!-- Nav -->
-								<!--<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>-->
-
 						</div>
 					</header>
 
@@ -158,7 +150,7 @@
 						<div class="inner">
 							<section>
 								<h2>Contact Me At:</h2>
-								<p>barriageb@gmail.com</p>
+								<h3>barriageb@gmail.com</h3>
 							</section>
 							<section>
 								<h2>Follow</h2>
