--- a/simpleRender/test.html
+++ b/simpleRender/test.html
@@ -19,7 +19,7 @@ font-weight:bold;
 <body bgColor="black" text="white" onload='main()' onresize="resize()">
 <script type="text/javascript">
 </script>
-<div class = "wrapper" style="margin: 0 auto; position: relative;">
+<div class = "wrapper" id="wrapper" style="margin: 0 auto; position: relative;">
 	<canvas id="screen" width="1920" height="1080" style="width: 100%; height: 100%;">
 	Please use a browser that supports "canvas."
 	</canvas>
