--- a/simpleRender/test.html
+++ b/simpleRender/test.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 <meta name="apple-mobile-web-app-capable" content="yes" >
 <style>
-  html, body, div, canvas {
-margin: 8;
-padding: 0;
-font-weight:bold;
+body, canvas{
+	width: 100%;
+	height: 100%;
+	margin: 0;
 }
 </style>
 </head>
@@ -20,7 +20,7 @@ font-weight:bold;
 <script type="text/javascript">
 </script>
 <div class = "wrapper" id="wrapper" style="margin: 0 auto; position: relative;">
-	<canvas id="screen" width="1920" height="1080" style="width: 100%; height: 100%;">
+	<canvas id="screen">
 	Please use a browser that supports "canvas."
 	</canvas>
 </div>
@@ -45,6 +45,7 @@ font-weight:bold;
 	<script src="./geo/capsule.js"></script>
 	<!--custom mesh code-->
 	<script src="./geo/mesh.js"></script>
+	<!--billboarded sprite code-->
 	<script src="sprite.js"></script>
 	<script src="main.js"></script>
 </body>
