Random object addition

--- a/simpleRender/test.html
+++ b/simpleRender/test.html
@@ -23,6 +23,9 @@ body, canvas{
 	<canvas id="screen">
 	Please use a browser that supports "canvas."
 	</canvas>
+	<div style="font-family:Arial; position:absolute; left: 5%; top:10%; z-index: 2;">
+		Press 'A' to add a random wireframe object.
+	</div>
 </div>
 	<script src="cuon-utils.js"></script>
 	<script src="webgl-debug.js"></script>
