Testing some code related to loading textures

--- a/simpleRender/test.html
+++ b/simpleRender/test.html
@@ -30,6 +30,7 @@ body, canvas{
 	<script src="cuon-utils.js"></script>
 	<script src="webgl-debug.js"></script>
 	<script src="webgl-utils.js"></script>
+	<script src="texture-utils.js"></script>
 	<!--Math/Linear Algebra scripts-->
 	<script src="mathf.js"></script>
 	<script src="math/Vector3.js"></script>
