--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -107,40 +107,6 @@
 										</div>
 									</a>
 								</article>
-								<!--<article class="style1">
-									<span class="image">
-										<img src="images/webgl.gif" alt="" />
-									</span>
-									<a href="../threejs/index.html">
-										<h2>ThreeJS</h2>
-										<div class="content">
-											<p>Demo code showing working knowledge of ThreeJS</p>
-										</div>
-									</a>
-								</article>-->
-								<!--<article class="style1">
-									<span class="image">
-										<img src="images/writer.png" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Text Writer</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/three.png" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>ThreeJS Example</h2>
-										<div class="content">
-											<p>Example project designed with three js</p>
-										</div>
-									</a>
-								</article>-->
-								
 							</section>
 						</div>
 					</div>
@@ -160,6 +126,7 @@
 									<li><a href="https://bennben.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.IO</span></a></li>
 								</ul>
 							</section>
+							<p> Version 1.0.0</p>
 						</div>
 					</footer>
 
