--- a/simpleRender/test.html
+++ b/simpleRender/test.html
@@ -24,7 +24,10 @@ body, canvas{
 	Please use a browser that supports "canvas."
 	</canvas>
 	<div style="font-family:Arial; position:absolute; left: 5%; top:10%; z-index: 2;">
-		Press 'A' to add a random wireframe object.
+		Press 'A' to add a random wireframe object. Adjust slider to change speed of animated sprite.
+	</div>
+	<div class="slidecontainer" style="position:absolute; left: 5%; top:15%;">
+		<input type="range" min="1" max="100" value="50" class="slider" id="myRange">
 	</div>
 </div>
 	<script src="cuon-utils.js"></script>
@@ -51,6 +54,7 @@ body, canvas{
 	<script src="./geo/mesh.js"></script>
 	<!--billboarded sprite code-->
 	<script src="sprite.js"></script>
+	<script src="animatedsprite.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
